Documento Basico + Capitulos

--- a/Documento.tex
+++ b/Documento.tex
@@ -13,7 +13,7 @@
 \usepackage{graphicx}
 \usepackage{afterpage}
 \usepackage{longtable}
-\usepackage[pdfborder={000}]{hyperref} %referencia
+\usepackage[pdfborder={000}]{hyperref}
 
 \newcommand{\myTitle}{Título del proyecto\xspace}
 \newcommand{\myDegree}{Grado en ...\xspace}
@@ -124,13 +124,14 @@
 \makeatother
 
 \usepackage{pdfpages}
+
 \begin{document}
 
 \input{Cover/Portada_Trabajo}
 
 %\input{prefacios/prefacio}
 
-%\chapter*{}
+\input{Chapters/Capitulo}
 
 %\thispagestyle{empty}
 
