Documento Basico Completado

--- a/Documento_Basico.tex
+++ b/Documento_Basico.tex
@@ -3,6 +3,7 @@
 \usepackage[utf8]{inputenc}
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{3}
+\usepackage{graphicx}
 
 \begin{document}
 
@@ -17,6 +18,9 @@
 \begin{minipage}{\textwidth}
 
 \centering
+
+\includegraphics[width=0.9\textwidth]{Images/UGR.jpg}\\[1.5cm]
+
 \textsc{\Large Asignatura\\[0.5cm]}
 \Huge\bfseries Titulo del Trabajo\\
 
@@ -25,8 +29,12 @@
 \vspace{2.5cm}
 \noindent\hspace*{\centeroffset}\begin{minipage}{\textwidth}
 \centering
-\textbf{Autor}\\ {Nombre Apellido1 Apellido2 (alumno)}\\[2cm]
-\textsc{-----------------------}\\Granada, Dia de Mes de Año
+\textbf{Autor}\\ {Nombre Apellido1 Apellido2 (alumno)}\\[3cm]
+
+\includegraphics[width=0.3\textwidth]{Images/ETSIIT.png}\\[0.5cm]
+
+\textsc{Escuela Técnica Superior de Ingenierías Informática y de Telecomunicación}\\
+\textsc{---}\\Granada, Dia de Mes de Año
 
 \end{minipage}
 
